exports[`Header should render 1`] = `
<View
  style={
    Array [
      Object {
        "height": 72,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16
      },
      undefined,
      Object {}
    ]
  }>
  <Text
    style={
      Array [
        Object {
          "color": "#003035",
          "fontFamily": "Brandon Text",
          "fontSize": 13,
          "textAlign": "center"
        },
        Array [
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400"
          },
          undefined,
          Object {}
        ]
      ]
    }>
    Microscopic Hummingbirds
  </Text>
</View>
`;

exports[`Header should support style overriding 1`] = `
<View
  style={
    Array [
      Object {
        "height": 72,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16
      },
      undefined,
      Object {
        "backgroundColor": "#cc3333"
      }
    ]
  }>
  <Text
    style={
      Array [
        Object {
          "color": "#003035",
          "fontFamily": "Brandon Text",
          "fontSize": 13,
          "textAlign": "center"
        },
        Array [
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400"
          },
          undefined,
          Object {}
        ]
      ]
    }>
    Microscopic Hummingbirds
  </Text>
</View>
`;

exports[`Header should support theming 1`] = `
<View
  style={
    Array [
      Object {
        "height": 72,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 16
      },
      Object {
        "backgroundColor": "#33cccc"
      },
      Object {}
    ]
  }>
  <Text
    style={
      Array [
        Object {
          "color": "#003035",
          "fontFamily": "Brandon Text",
          "fontSize": 13,
          "textAlign": "center"
        },
        Array [
          Object {
            "fontFamily": "Brandon Text_medium",
            "fontSize": 20,
            "fontWeight": "400"
          },
          undefined,
          Object {}
        ]
      ]
    }>
    Microscopic Hummingbirds
  </Text>
</View>
`;
